# codex_diary

./: .gitignore  README.en.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
.playwright-cli/: page-2026-04-22T19-54-49-461Z.yml  page-2026-04-22T19-55-55-917Z.yml
Casks/: codex-diary.rb
codex_diary/: __init__.py  app.py  app_launcher.py  chronicle.py  cli.py  diary_length.py  diary_structure.py  generator.py  i18n.py  llm.py  markdown_html.py  models.py  package_macos.py  parser.py  redaction.py
codex_diary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex_diary/ui/: app.js  index.html  styles.css  ui_copy.js  ui_copy_extra.js
codex_diary/ui/assets/: README.md
docs/: event-selection-similarity.ko.md
tests/: test_app.py  test_chronicle.py  test_cli.py  test_package_macos.py  test_processing.py  test_ui_copy.py
